--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  build_runner: ^2.4.4
+  flutter_translate: ^4.0.4
+  google_translate: ^0.0.6
+  simplytranslate: ^1.2.2
 
 dev_dependencies:
   flutter_test:
